tests/rustdoc-ui/doc-cfg.stderr
error: `cfg` predicate is not specified
  --> $DIR/doc-cfg.rs:3:7
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   |       ^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/doc-cfg.rs:3:23
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   |                       ^^^

warning: unexpected `cfg` condition name: `foo`
  --> $DIR/doc-cfg.rs:6:11
   |
LL | #[doc(cfg(foo), cfg(bar))]
   |           ^^^
   |
   = help: expected names are: `FALSE` and `test` and 31 more
   = help: to expect this configuration use `--check-cfg=cfg(foo)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default

warning: unexpected `cfg` condition name: `bar`
  --> $DIR/doc-cfg.rs:6:21
   |
LL | #[doc(cfg(foo), cfg(bar))]
   |                     ^^^
   |
   = help: to expect this configuration use `--check-cfg=cfg(bar)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration

error: `cfg` predicate is not specified
  --> $DIR/doc-cfg.rs:9:7
   |
LL | #[doc(cfg())]
   |       ^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/doc-cfg.rs:10:16
   |
LL | #[doc(cfg(foo, bar))]
   |                ^^^

error: aborting due to 4 previous errors; 2 warnings emitted

